--- a/ticketGol/src/main/webapp/Home.html
+++ b/ticketGol/src/main/webapp/Home.html
@@ -63,16 +63,16 @@
 
       <!-- Imagens dos slides -->
       <div class="slide first">
-        <img src="home/img/X3.png" alt="Imagem1" />
+        <img src="/Home/img/X3.png" alt="Imagem1" />
       </div>
       <div class="slide">
-        <img src="home/img/XX3.png" alt="Imagem2" />
+        <img src="/Home/img/XX3.png" alt="Imagem2" />
       </div>
       <div class="slide">
-        <img src="home/img/X1.png" alt="Imagem3" />
+        <img src="/Home/img/X1.png" alt="Imagem3" />
       </div>
       <div class="slide">
-        <img src="home/img/XX1.png" alt="Imagem4" />
+        <img src="/Home/img/XX1.png" alt="Imagem4" />
       </div>
 
       <!-- Navegação automática -->
