--- a/ticketGol/src/main/webapp/Login.html
+++ b/ticketGol/src/main/webapp/Login.html
@@ -24,10 +24,10 @@
 
     <!-- Formulário de login -->
     <form id="signin" action="/login" method="post" autocomplete="off">
-      <input type="text" name="emailLogin" id="emailLogin" required />
+      <input type="text" name="emailLogin" id="emailLogin" required placeholder="Digite seu email" />
       <i class="fi fi-rr-envelope iEmailLogin" style="color: #ffffff;"></i>
 
-      <input type="password" name="senhaLogin" id="senhaLogin" required />
+      <input type="password" name="senhaLogin" id="senhaLogin" required placeholder="Digite sua senha" />
       <i class="fi fi-rr-lock iLockLogin" style="color: #ffffff;"></i>
       
       <button class="btn-login"  onclick="logar(); return false">Login</button>
@@ -35,19 +35,19 @@
 
     <!-- Formulário de cadastro -->
     <form id="signup" action="/create-clientes" method="post" autocomplete="off">
-      <input type="text" name="nomeCliente" id="nomeCliente" required />
+      <input type="text" name="nomeCliente" id="nomeCliente" required placeholder="Digite seu nome" />
       <i class="fi fi-rr-user iUser" style="color: #ffffff;"></i>
 
-      <input type="text" type="text" name="email" id="email" required />
+      <input type="text" type="text" name="email" id="email" required placeholder="Digite seu email" />
       <i class="fi fi-rr-envelope iEmail" style="color: #ffffff;"></i>
 
-      <input type="text" name="telefone" id="telefone" required />
+      <input type="text" name="telefone" id="telefone" required placeholder="Digite o telefone" />
       <i class="fi fi-rr-phone-call iPhone" style="color: #ffffff;"></i>
 
-      <input type="text" name="dataDeNascimento" id="dataDeNascimento" required />
+      <input type="text" name="dataDeNascimento" id="dataDeNascimento" required placeholder="Digite a data de nascimento" />
       <i class="fi fi-rr-calendar iCalendar" style="color: #ffffff;"></i>
 
-      <input type="password" name="senhaCliente" id="senhaCliente" required />
+      <input type="password" name="senhaCliente" id="senhaCliente" required placeholder="Digite sua senha " />
       <i class="fi fi-rr-lock iLock" style="color: #ffffff;"></i>
 
       <div class="divCheck">
@@ -58,5 +58,4 @@
 
   <script src="Login/js/Login.js"></script>
 </body>
-
 </html>
