Adicionando os jogos a tela de jogos 08-05-2024

--- a/ticketGol/src/main/webapp/Home.html
+++ b/ticketGol/src/main/webapp/Home.html
@@ -37,7 +37,7 @@
     <ul>
       <!-- Links de navegação -->
       <li><a data-scroll="inicio" href="#inicio">Início</a></li>
-      <li><a href="Jogos.html">Jogos</a></li>
+      <li><a href="/lista-eventos">Jogos</a></li>
       <li><a data-scroll="informacoes" href="#informacoes">Informações</a></li>
     </ul>
 
@@ -103,7 +103,7 @@
       <p class="footer-links">
         <a href="Home.html">Início</a>
         |
-        <a href="Jogos.html">Jogos</a>
+        <a href="/lista-eventos">Jogos</a>
         |
         <a href="Informacoes.html">Informações</a>
       </p>
