--- a/ticketGol/src/main/webapp/HomeADM.html
+++ b/ticketGol/src/main/webapp/HomeADM.html
@@ -38,7 +38,7 @@
       <!-- Links de navegação -->
       <li><a data-scroll="inicio" href="#inicio">Início</a></li>
       <li><a href="/lista-eventos2">Jogos</a></li>
-      <li><a href="cadastroEventos.html">Cadastrar Jogo</a></li>
+      <li><a href="CadastroJogos.html">Cadastrar Jogo</a></li>
     </ul>
 
     <!-- Botão de login -->
