--- a/ticketGol/src/main/webapp/JogosCadastro.html
+++ b/ticketGol/src/main/webapp/JogosCadastro.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Jogos</title>
+    <link rel="icon" type="image/x-icon" href="Jogos/img/img-icone2.png" />
 
-    <link rel="stylesheet" href="Jogos/css/CadastroJogos.css">
+    <link rel="stylesheet" href="Jogos/css/JogosCadastro.css">
     <link rel='stylesheet'href='https://cdn-uicons.flaticon.com/2.3.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
 </head>
 
 <body>
     <div class="container">
-        <h1>Cadastro de Eventos</h1>
+        <h1>Cadastrar Jogo</h1>
 
         <form action="/create-evento" method="post">
 
