Adicionando horario aos eventos e atualizando as páginas html e jsp| 14-05-25

--- a/ticketGol/src/main/webapp/JogosCadastro.html
+++ b/ticketGol/src/main/webapp/JogosCadastro.html
@@ -30,6 +30,9 @@
                 <label>Data do Evento:</label>
                 <input type="text" name="data" id="data" required placeholder="Digite a Data">
 
+                <label>Horário do Evento:</label>
+                <input type="text" name="horario" id="horario" required placeholder="Digite o horário">
+
                 <label>Quantidade Disponível:</label>
                 <input type="number" name="qtdDisponivel" id="qtdDisponivel" required placeholder="Digite a Quantidade Disponível">
 
