--- a/ticketGol/src/main/webapp/Home.html
+++ b/ticketGol/src/main/webapp/Home.html
@@ -44,8 +44,8 @@
     </ul>
 
     <!-- Botão de login -->
-    <button class="btn">
-      <a href="Login.html" class="btn">
+    <button class="btn" href="Login.html" class="btn">
+      <a href="Login.html">
         <img src="Home/img/img-iconeUser.png" alt="Entrar">Login
       </a>
     </button>
@@ -151,6 +151,9 @@
       </div>
     </footer>
   </section>
+
+  <script src="Home/js/Home.js"></script>
+  
 </body>
 
 </html>
