--- a/ticketGol/src/main/webapp/JogosCadastro.html
+++ b/ticketGol/src/main/webapp/JogosCadastro.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Jogos</title>
     <link rel="icon" type="image/x-icon" href="Jogos/img/img-icone2.png" />
-
     <link rel="stylesheet" href="Jogos/css/JogosCadastro.css">
+    <script src="Jogos/js/JogosCadastro.js"></script>
+
     <link rel='stylesheet'href='https://cdn-uicons.flaticon.com/2.3.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body>
