Corrgindo os erros de compra e adicionando valor nos eventos

--- a/ticketGol/src/main/webapp/JogosCadastro.html
+++ b/ticketGol/src/main/webapp/JogosCadastro.html
@@ -35,6 +35,9 @@
                 <label>Horário do Evento:</label>
                 <input type="text" name="horario" id="horario" required placeholder="Digite o horário">
 
+                <label>Valor do Evento:</label>
+                <input type="text" name="valor" id="valor" required placeholder="Digite o valor">
+
                 <label>Quantidade Disponível:</label>
                 <input type="number" name="qtdDisponivel" id="qtdDisponivel" required
                     placeholder="Digite a Quantidade Disponível">
