Entrega Final - Projeto PI

--- a/ticketGol/src/main/webapp/Compra.html
+++ b/ticketGol/src/main/webapp/Compra.html
@@ -29,7 +29,7 @@
                 </select>
             </div>
             <div id="qr-code-container" style="display: none;" class="img-qrCode">
-                <img src="Compra/img/qrcode.png" alt="QR Code Pix">
+                <img src="Compra/img/img-qrCode.jpg" alt="QR Code Pix">
             </div>
             <button id="btn-pagamento">Confirmar Compra</button>
         </form>
